tests/errors/bare_underscore.dang
# `_` is only meaningful as the implicit parameter inside a block.
# Outside any block it is an undefined reference.
let x = _ + 1
